--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -340,6 +340,6 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: D:\Dafa\Job-Hunting\Lion-Parcel\Technical-Test\airflow_home\data\json_files
+      device: ...\airflow_home\data\json_files
       o: bind
 
